test/sh/error/misc/no_same_name_aliases.sk
some_alias := Int
some_alias := Float
